Ironing out the Presents/Extends/Expands coding

--- a/Conferences/CAV 2018(2).md
+++ b/Conferences/CAV 2018(2).md
@@ -15,7 +15,7 @@
 	✅ Implemented in [[Span]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_6) [[StringFuzz]] - A Fuzzer for String Solvers.
 	[Dmitry Blotsky](https://dblp.org/pid/223/5185.html), [Federico Mora](https://dblp.org/pid/82/5093.html), [Murphy Berzish](https://dblp.org/pid/180/5429.html), [Yunhui Zheng](https://dblp.org/pid/47/702.html), [Ifaz Kabir](https://dblp.org/pid/202/2276.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html)
-	✅ Introduces [[StringFuzz]]
+	✅ Presents [[StringFuzz]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_23) On the Completeness of Verifying Message Passing Programs Under Bounded Asynchrony.
 	[Ahmed Bouajjani](https://dblp.org/pid/b/AhmedBouajjani.html), [Constantin Enea](https://dblp.org/pid/72/2839.html), [Kailiang Ji](https://dblp.org/pid/166/0923.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html)
 	❌ None
@@ -30,7 +30,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_4) The [[DEEPSEC]] Prover.
 	[Vincent Cheval](https://dblp.org/pid/62/8336.html), [Steve Kremer](https://dblp.org/pid/k/SteveKremer.html), [Itsaka Rakotonirina](https://dblp.org/pid/223/5215.html)
-	✅ Introduces [[DEEPSEC]]
+	✅ Presents [[DEEPSEC]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_26) Continuous Formal Verification of Amazon s2n.
 	[Andrey Chudnov](https://dblp.org/pid/94/3130.html), [Nathan Collins](https://dblp.org/pid/65/10809.html), [Byron Cook](https://dblp.org/pid/36/113.html), [Joey Dodds](https://dblp.org/pid/223/5187.html), [Brian Huffman](https://dblp.org/pid/69/3465.html), [Colm MacCárthaigh](https://dblp.org/pid/223/4997.html), [Stephen Magill](https://dblp.org/pid/30/5360.html), [Eric Mertens](https://dblp.org/pid/143/2709.html), [Eric Mullen](https://dblp.org/pid/19/9842.html), [Serdar Tasiran](https://dblp.org/pid/88/1444.html), [Aaron Tomb](https://dblp.org/pid/91/466.html), [Eddy Westbrook](https://dblp.org/pid/223/5374.html)
 	❌ None
@@ -63,7 +63,7 @@
 	✅ Built on top of [[dReal]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_5) [[SimpleCAR]] - An Efficient Bug-Finding Tool Based on Approximate Reachability.
 	[Jianwen Li](https://dblp.org/pid/21/8669.html), [Rohit Dureja](https://dblp.org/pid/208/7416.html), [Geguang Pu](https://dblp.org/pid/33/1678.html), [Kristin Yvonne Rozier](https://dblp.org/pid/67/519.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html)
-	✅ Introduces [[SimpleCAR]]
+	✅ Presents [[SimpleCAR]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_22) Quasi-Optimal Partial Order Reduction.
 	[Huyen T. T. Nguyen](https://dblp.org/pid/215/3598.html), [César Rodríguez](https://dblp.org/pid/74/9958.html), [Marcelo Sousa](https://dblp.org/pid/123/7772.html), [Camille Coti](https://dblp.org/pid/78/4708.html), [Laure Petrucci](https://dblp.org/pid/p/LaurePetrucci.html)
 	✅ Implemented in [[DPU]]
@@ -93,4 +93,4 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_12) [[SCInfer]] - Refinement-Based Verification of Software Countermeasures Against Side-Channel Attacks.
 	[Jun Zhang](https://dblp.org/pid/29/4190.html), [Pengfei Gao](https://dblp.org/pid/147/0949.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Chao Wang](https://dblp.org/pid/w/ChaoWang.html)
-	✅ Introduces [[SCInfer]]
+	✅ Presents [[SCInfer]]
