--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -24,7 +24,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_34) [[Peregrine]] - A Tool for the Analysis of Population Protocols.
 	[Michael Blondin](https://dblp.org/pid/117/6024.html), [Javier Esparza](https://dblp.org/pid/e/JEsparza.html), [Stefan Jaax](https://dblp.org/pid/182/9266.html)
-	✅ Introduces [[Peregrine]]
+	✅ Presents [[Peregrine]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_28) Start Pruning When Time Gets Urgent - Partial Order Reduction for Timed Systems.
 	[Frederik M. Bønneland](https://dblp.org/pid/220/0647.html), [Peter Gjøl Jensen](https://dblp.org/pid/144/4964.html), [Kim Guldstrand Larsen](https://dblp.org/pid/l/KimGuldstrandLarsen.html), [Marco Muñiz](https://dblp.org/pid/12/9960.html), [Jirí Srba](https://dblp.org/pid/s/JiriSrba.html)
 	✅ Algorithm/technique implemented in model checker [[TAPAAL]]
@@ -36,13 +36,13 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_10) [[JBMC]] - A Bounded Model Checking Tool for Verifying Java Bytecode.
 	[Lucas C. Cordeiro](https://dblp.org/pid/42/4311.html), [Pascal Kesseli](https://dblp.org/pid/168/8498.html), [Daniel Kroening](https://dblp.org/pid/k/DanielKroening.html), [Peter Schrammel](https://dblp.org/pid/23/8898.html), [Marek Trtík](https://dblp.org/pid/24/9889.html)
-	✅ Introduces [[JBMC]]
+	✅ Presents [[JBMC]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_1) Semantic Adversarial Deep Learning.
 	[Tommaso Dreossi](https://dblp.org/pid/117/9140.html), [Somesh Jha](https://dblp.org/pid/j/SomeshJha.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_33) [[Nagini]] - A Static Verifier for Python.
 	[Marco Eilers](https://dblp.org/pid/217/4745.html), [Peter Müller](https://dblp.org/pid/m/PMuller1.html)
-	✅ Introduces [[Nagini]]
+	✅ Presents [[Nagini]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_26) Monitoring Weak Consistency.
 	[Michael Emmi](https://dblp.org/pid/76/5819.html), [Constantin Enea](https://dblp.org/pid/72/2839.html)
 	❌ None
@@ -84,17 +84,17 @@
 	✅ Tool: [[CIVL (Boogie extension)]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_30) [[Rabinizer 4]] - From LTL to Your Favourite Deterministic Automaton.
 	[Jan Kretínský](https://dblp.org/pid/95/6511.html), [Tobias Meggendorfer](https://dblp.org/pid/194/2764.html), [Salomon Sickert](https://dblp.org/pid/129/1369.html), [Christopher Ziegler](https://dblp.org/pid/223/5064.html)
-	✅ Introduces [[Rabinizer 4]]
+	✅ Extends [[Rabinizer]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_11) Eager Abstraction for Symbolic Model Checking.
 	[Kenneth L. McMillan](https://dblp.org/pid/m/KennethLMcMillan.html)
 	✅ Implemented in [[IVy]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_31) [[Strix]] - Explicit Reactive Synthesis Strikes Back!
 	[Philipp J. Meyer](https://dblp.org/pid/118/3833.html), [Salomon Sickert](https://dblp.org/pid/129/1369.html), [Michael Luttenberger](https://dblp.org/pid/62/964.html)
-	✅ Introduces [[Strix]]
+	✅ Presents [[Strix]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_32) Btor2 , [[BtorMC]] and [[Boolector]] 3.0.
 	[Aina Niemetz](https://dblp.org/pid/115/4373.html), [Mathias Preiner](https://dblp.org/pid/115/4371.html), [Clifford Wolf](https://dblp.org/pid/121/1469.html), [Armin Biere](https://dblp.org/pid/b/ArminBiere.html)
-	✅ Introduces [[BtorMC]]
-	✅ Introduces [[Boolector]]
+	✅ Presents [[BtorMC]]
+	✅ Presents [[Boolector]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_9) Exploiting Synchrony and Symmetry in Relational Verification.
 	[Lauren Pick](https://dblp.org/pid/223/5412.html), [Grigory Fedyukovich](https://dblp.org/pid/43/8810.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html)
 	✅ Implemented in [[Synonym]]
