--- a/Conferences/CAV 2019(2).md
+++ b/Conferences/CAV 2019(2).md
@@ -3,7 +3,7 @@
 ---
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_14) Reachability Analysis for AWS-Based Networks.
 	[John Backes](https://dblp.org/pid/97/8857.html), [Sam Bayless](https://dblp.org/pid/115/4378.html), [Byron Cook](https://dblp.org/pid/36/113.html), [Catherine Dodge](https://dblp.org/pid/79/3346.html), [Andrew Gacek](https://dblp.org/pid/84/6151.html), [Alan J. Hu](https://dblp.org/pid/01/2712.html), [Temesghen Kahsai](https://dblp.org/pid/02/6790.html), [Bill Kocik](https://dblp.org/pid/244/8238.html), [Evgenii Kotelnikov](https://dblp.org/pid/39/11063.html), [Jure Kukovec](https://dblp.org/pid/219/2203.html), [Sean McLaughlin](https://dblp.org/pid/66/5402.html), [Jason Reed](https://dblp.org/pid/244/8203.html), [Neha Rungta](https://dblp.org/pid/66/4832.html), [John Sizemore](https://dblp.org/pid/244/8225.html), [Mark A. Stalzer](https://dblp.org/pid/41/5189.html), [Preethi Srinivasan](https://dblp.org/pid/182/4720.html), [Pavle Subotic](https://dblp.org/pid/124/8970.html), [Carsten Varming](https://dblp.org/pid/29/2675.html), [Blake Whaley](https://dblp.org/pid/244/8299.html)
-	✅ Introduces [[TIROS]]
+	✅ Presents [[TIROS]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_10) Icing - Supporting Fast-Math Style Optimizations in a Verified Compiler.
 	[Heiko Becker](https://dblp.org/pid/180/4436.html), [Eva Darulova](https://dblp.org/pid/75/10322.html), [Magnus O. Myreen](https://dblp.org/pid/92/2955.html), [Zachary Tatlock](https://dblp.org/pid/24/2888.html)
 	❌ None
@@ -27,7 +27,7 @@
 	✅ Implemented in [[Daisy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_30) [[Violat]] - Generating Tests of Observational Refinement for Concurrent Objects.
 	[Michael Emmi](https://dblp.org/pid/76/5819.html), [Constantin Enea](https://dblp.org/pid/72/2839.html)
-	✅ Introduces [[Violat]]
+	✅ Presents [[Violat]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_13) SecCSL - Security Concurrent Separation Logic.
 	[Gidon Ernst](https://dblp.org/pid/19/1202.html), [Toby Murray](https://dblp.org/pid/31/6289.html)
 	✅ Implemented in [[SecC]]
@@ -51,16 +51,16 @@
 	✅ Implemented [[FOADA]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_4) [[Q3B]] - An Efficient BDD-based SMT Solver for Quantified Bit-Vectors.
 	[Martin Jonás](https://dblp.org/pid/178/4046.html), [Jan Strejcek](https://dblp.org/pid/37/1716.html)
-	✅ Introduces [[Q3B]]
+	✅ Presents [[Q3B]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_21) Interpolating Strong Induction.
 	[Hari Govind Vediramana Krishnan](https://dblp.org/pid/204/2535.html), [Yakir Vizel](https://dblp.org/pid/86/2578.html), [Vijay Ganesh](https://dblp.org/pid/g/VijayGanesh.html), [Arie Gurfinkel](https://dblp.org/pid/44/3532.html)
 	✅ Implemented on top of [[Avy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_25) [[AliveInLean]] - A Verified LLVM Peephole Optimization Verifier.
 	[Juneyoung Lee](https://dblp.org/pid/181/5852.html), [Chung-Kil Hur](https://dblp.org/pid/75/3287.html), [Nuno P. Lopes](https://dblp.org/pid/77/2149.html)
-	✅ Introduces [[AliveInLean]]
+	✅ Presents [[AliveInLean]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_1) Satisfiability Checking for Mission-Time LTL.
 	[Jianwen Li](https://dblp.org/pid/21/8669.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html), [Kristin Y. Rozier](https://dblp.org/pid/67/519.html)
-	✅ Introduces [[MLTLconverter]]
+	✅ Presents [[MLTLconverter]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_22) Verifying Asynchronous Event-Driven Programs Using Partial Abstract Transformers.
 	[Peizun Liu](https://dblp.org/pid/156/3487.html), [Thomas Wahl](https://dblp.org/pid/72/5272.html), [Akash Lal](https://dblp.org/pid/27/1008.html)
 	✅ Implemented atop [[PTester]]
@@ -75,7 +75,7 @@
 	✅ Implemented in [[CADET]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_5) [[cvc4sy]] - Smart and Fast Term Enumeration for Syntax-Guided Synthesis.
 	[Andrew Reynolds](https://dblp.org/pid/41/9861.html), [Haniel Barbosa](https://dblp.org/pid/116/5052.html), [Andres Nötzli](https://dblp.org/pid/131/4231.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [Cesare Tinelli](https://dblp.org/pid/37/4921.html)
-	✅ Introduces [[cvc4sy]]
+	✅ Presents [[cvc4sy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25543-5_2) High-Level Abstractions for Simplifying Extended String Constraints in SMT.
 	[Andrew Reynolds](https://dblp.org/pid/41/9861.html), [Andres Nötzli](https://dblp.org/pid/131/4231.html), [Clark W. Barrett](https://dblp.org/pid/b/ClarkWBarrett.html), [Cesare Tinelli](https://dblp.org/pid/37/4921.html)
 	✅ Implemented in [[CVC4]]
