--- a/Conferences/CAV 2019.md
+++ b/Conferences/CAV 2019.md
@@ -18,7 +18,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_21) Extending [[nuXmv]] with Timed Transition Systems and Timed Temporal Properties.
 	[Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Enrico Magnago](https://dblp.org/pid/244/8257.html), [Marco Roveri](https://dblp.org/pid/83/563.html), [Stefano Tonetta](https://dblp.org/pid/t/StefanoTonetta.html)
-	✅ Introduces [[nuXmv]]
+	✅ Presents [[nuXmv]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_7) Verifying Hyperliveness.
 	[Norine Coenen](https://dblp.org/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [César Sánchez](https://dblp.org/pid/38/1858.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
 	✅ Implemented in [[MCHyper]], and a tool without a name for the synthesis of strategies and reactive systems from hyperproperties that uses [[Z3]]
@@ -33,7 +33,7 @@
 	✅ Implemented approaches, Uses CAQE and MaxCount for solving synthesis instances
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_25) [[VerifAI]] - A Toolkit for the Formal Design and Analysis of Artificial Intelligence-Based Systems.
 	[Tommaso Dreossi](https://dblp.org/pid/117/9140.html), [Daniel J. Fremont](https://dblp.org/pid/144/7602.html), [Shromona Ghosh](https://dblp.org/pid/164/5676.html), [Edward Kim](https://dblp.org/pid/06/445.html), [Hadi Ravanbakhsh](https://dblp.org/pid/134/9799.html), [Marcell Vazquez-Chanlatte](https://dblp.org/pid/192/1518.html), [Sanjit A. Seshia](https://dblp.org/pid/s/SanjitASeshia.html)
-	✅ Introduces [[VerifAI]]
+	✅ Presents [[VerifAI]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_15) Efficient Synthesis with Probabilistic Constraints.
 	[Samuel Drews](https://dblp.org/pid/182/9259.html), [Aws Albarghouthi](https://dblp.org/pid/90/8295.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html)
 	✅ Implemented their algorithm [[τ-DIGITS]]
@@ -45,7 +45,7 @@
 	✅ Tool: [[Weaver]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_24) [[StreamLAB]] - Stream-based Monitoring of Cyber-Physical Systems.
 	[Peter Faymonville](https://dblp.org/pid/05/7445.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Malte Schledjewski](https://dblp.org/pid/244/8206.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Marvin Stenger](https://dblp.org/pid/189/1078.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html), [Hazem Torfah](https://dblp.org/pid/140/9733.html)
-	✅ Introduces [[StreamLAB]]
+	✅ Presents [[StreamLAB]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_14) Quantified Invariants via Syntax-Guided Synthesis.
 	[Grigory Fedyukovich](https://dblp.org/pid/43/8810.html), [Sumanth Prabhu](https://dblp.org/pid/206/6798-1.html), [Kumar Madhukar](https://dblp.org/pid/134/8956.html), [Aarti Gupta](https://dblp.org/pid/18/2229.html)
 	✅ Implemented in [[FreqHorn]]
@@ -87,10 +87,10 @@
 	✅ Implemented in [[KMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_22) [[Cerberus-BMC]] - A Principled Reference Semantics and Exploration Tool for Concurrent and Sequential C.
 	[Stella Lau](https://dblp.org/pid/244/8329.html), [Victor B. F. Gomes](https://dblp.org/pid/139/0605.html), [Kayvan Memarian](https://dblp.org/pid/28/10810.html), [Jean Pichon-Pharabod](https://dblp.org/pid/160/7730.html), [Peter Sewell](https://dblp.org/pid/74/185.html)
-	✅ Introduces [[Cerberus-BMC]]
+	✅ Presents [[Cerberus-BMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_31) [[STAMINA]] - STochastic Approximate Model-Checker for INfinite-State Analysis.
 	[Thakur Neupane](https://dblp.org/pid/234/8759.html), [Chris J. Myers](https://dblp.org/pid/89/3161.html), [Curtis Madsen](https://dblp.org/pid/02/7594.html), [Hao Zheng](https://dblp.org/pid/31/6916-1.html), [Zhen Zhang](https://dblp.org/pid/19/5112-6.html)
-	✅ Introduces [[STAMINA]]
+	✅ Presents [[STAMINA]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_17) Overfitting in Synthesis - Theory and Practice.
 	[Saswat Padhi](https://dblp.org/pid/180/8207.html), [Todd D. Millstein](https://dblp.org/pid/93/4679.html), [Aditya V. Nori](https://dblp.org/pid/n/AdityaVNori.html), [Rahul Sharma](https://dblp.org/pid/22/846-1.html)
 	✅ Implemented [[PLearn]] and extended [[LoopInvGen]] with HEnum
