--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -2,16 +2,16 @@
 ---
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_10) [[MetaVal]] - Witness Validation via Verification.
 	[Dirk Beyer](https://dblp.org/pid/b/DirkBeyer1.html), [Martin Spiessl](https://dblp.org/pid/269/9790.html)
-	✅ Introduces [[MetaVal]]
+	✅ Presents [[MetaVal]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_28) Good-Enough Synthesis.
 	[Shaull Almagor](https://dblp.org/pid/88/8556.html), [Orna Kupferman](https://dblp.org/pid/k/OrnaKupferman.html)
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_27) [[PrIC3]] - Property Directed Reachability for MDPs.
 	[Kevin Batz](https://dblp.org/pid/215/5068.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.org/pid/172/5070.html), [Philipp Schröer](https://dblp.org/pid/264/0074.html)
-	✅ Introduces [[PrIC3]]
+	✅ Presents [[PrIC3]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) [[RTLola]] Cleared for Take-Off - Monitoring Autonomous Aircraft.
 	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Sebastian Schirmer](https://dblp.org/pid/185/8889.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Christoph Torens](https://dblp.org/pid/33/9870.html)
-	✅ Introduces [[RTLola]]
+	✅ Presents [[RTLola]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_17) Global PAC Bounds for Learning Discrete Time Markov Chains.
 	[Hugo Bazille](https://dblp.org/pid/150/7498.html), [Blaise Genest](https://dblp.org/pid/59/6859.html), [Cyrille Jégourel](https://dblp.org/pid/33/10826.html), [Jun Sun](https://dblp.org/pid/s/JunSun1.html)
 	❌ None
@@ -44,7 +44,7 @@
 	✅ Implementation has no name
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_5) [[AdamMC]] - A Model Checker for Petri Nets with Transits against Flow-LTL.
 	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Manuel Gieseking](https://dblp.org/pid/165/2732.html), [Jesko Hecking-Harbusch](https://dblp.org/pid/210/2559.html), [Ernst-Rüdiger Olderog](https://dblp.org/pid/o/ErnstRudigerOlderog.html)
-	✅ Introduces [[AdamMC]]
+	✅ Presents [[AdamMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_4) Realizing ømega-regular Hyperproperties.
 	[Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Christopher Hahn](https://dblp.org/pid/91/9661.html), [Jana Hofmann](https://dblp.org/pid/246/5631.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
 	✅ Implemented in [[BoSy]]
@@ -71,13 +71,13 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_25) [[PRISM-games]] 3.0 - Stochastic Game Verification with Concurrency, Equilibria and Time.
 	[Marta Kwiatkowska](https://dblp.org/pid/k/MartaZKwiatkowska.html), [Gethin Norman](https://dblp.org/pid/59/1659.html), [David Parker](https://dblp.org/pid/33/3095.html), [Gabriel Santos](https://dblp.org/pid/19/7786.html)
-	✅ Introduces [[PRISM-games]]
+	✅ Presents [[PRISM-games]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_24) [[AMYTISS]] - Parallelized Automated Controller Synthesis for Large-Scale Stochastic Systems.
 	[Abolfazl Lavaei](https://dblp.org/pid/202/7474.html), [Mahmoud Khaled](https://dblp.org/pid/153/9945.html), [Sadegh Soudjani](https://dblp.org/pid/23/10279.html), [Majid Zamani](https://dblp.org/pid/34/9188.html)
-	✅ Introduces [[AMYTISS]]
+	✅ Presents [[AMYTISS]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_12) [[Ivy]] - A Multi-modal Verification Tool for Distributed Algorithms.
 	[Kenneth L. McMillan](https://dblp.org/pid/m/KennethLMcMillan.html), [Oded Padon](https://dblp.org/pid/155/8122.html)
-	✅ Introduces [[Ivy]]
+	✅ Presents [[Ivy]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_19) Widest Paths and Global Propagation in Bounded Value Iteration for Stochastic Games.
 	[Kittiphon Phalakarn](https://dblp.org/pid/187/5700.html), [Toru Takisaka](https://dblp.org/pid/156/0024.html), [Thomas Haas](https://dblp.org/pid/115/7079.html), [Ichiro Hasuo](https://dblp.org/pid/26/4542.html)
 	❌ None
@@ -86,13 +86,13 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_23) [[STMC]] - Statistical Model Checker with Stratified and Antithetic Sampling.
 	[Nima Roohi](https://dblp.org/pid/93/7539.html), [Yu Wang](https://dblp.org/pid/02/5889-44.html), [Matthew West](https://dblp.org/pid/16/1726-1.html), [Geir E. Dullerud](https://dblp.org/pid/d/GeirEDullerud.html), [Mahesh Viswanathan](https://dblp.org/pid/23/2759-1.html)
-	✅ Introduces [[STMC]]
+	✅ Presents [[STMC]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_33) Must Fault Localization for Program Repair.
 	[Bat-Chen Rothenberg](https://dblp.org/pid/189/1034.html), [Orna Grumberg](https://dblp.org/pid/g/OrnaGrumberg.html)
 	✅ Implemented in [[AllRepair]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_9) [[Code2Inv]] - A Deep Learning Framework for Program Verification.
 	[Xujie Si](https://dblp.org/pid/142/8449.html), [Aaditya Naik](https://dblp.org/pid/269/9481.html), [Hanjun Dai](https://dblp.org/pid/144/7311.html), [Mayur Naik](https://dblp.org/pid/92/6794.html), [Le Song](https://dblp.org/pid/94/3481.html)
-	✅ Introduces [[Code2Inv]]
+	✅ Presents [[Code2Inv]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_6) Action-Based Model Checking - Logic, Automata, and Reduction.
 	[Stephen F. Siegel](https://dblp.org/pid/50/540.html), [Yihao Yan](https://dblp.org/pid/269/9604.html)
 	✅ Implemented in [[McRERS]]
