Added tool pages for NOPE, nuXmv, Oink and Origami

--- a/Conferences/CAV 2019.md
+++ b/Conferences/CAV 2019.md
@@ -18,7 +18,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_21) Extending [[nuXmv]] with Timed Transition Systems and Timed Temporal Properties.
 	[Alessandro Cimatti](https://dblp.org/pid/13/5961.html), [Alberto Griggio](https://dblp.org/pid/19/3686.html), [Enrico Magnago](https://dblp.org/pid/244/8257.html), [Marco Roveri](https://dblp.org/pid/83/563.html), [Stefano Tonetta](https://dblp.org/pid/t/StefanoTonetta.html)
-	✅ Presents [[nuXmv]]
+	✅ Extends [[nuXmv]]
 -	[🔓](https://doi.org/10.1007/978-3-030-25540-4_7) Verifying Hyperliveness.
 	[Norine Coenen](https://dblp.org/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [César Sánchez](https://dblp.org/pid/38/1858.html), [Leander Tentrup](https://dblp.org/pid/143/2715.html)
 	✅ Implemented in [[MCHyper]], and a tool without a name for the synthesis of strategies and reactive systems from hyperproperties that uses [[Z3]]
