Added tool pages: Q3B, Quasi

--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -72,7 +72,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_21) Syntax-Guided Synthesis with Quantitative Syntactic Objectives.
 	[Qinheping Hu](https://dblp.org/pid/201/4822.html), [Loris D'Antoni](https://dblp.org/pid/85/770.html)
-	✅ Tool: [[QuaSi]]
+	✅ Presents [[QuaSi]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_36) Value Iteration for Simple Stochastic Games - Stopping Criterion and Learning Algorithm.
 	[Edon Kelmendi](https://dblp.org/pid/140/7385.html), [Julia Krämer](https://dblp.org/pid/132/6988.html), [Jan Kretínský](https://dblp.org/pid/95/6511.html), [Maximilian Weininger](https://dblp.org/pid/194/2910.html)
 	❌ None
