Added tool pages: QuIP, QuIPFly, Rabinizer

--- a/Conferences/CAV 2018.md
+++ b/Conferences/CAV 2018.md
@@ -82,7 +82,7 @@
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_5) Layered Concurrent Programs.
 	[Bernhard Kragl](https://dblp.org/pid/138/6924.html), [Shaz Qadeer](https://dblp.org/pid/q/ShazQadeer.html)
 	✅ Tool: [[CIVL (Boogie extension)]]
--	[🔓](https://doi.org/10.1007/978-3-319-96145-3_30) [[Rabinizer 4]] - From LTL to Your Favourite Deterministic Automaton.
+-	[🔓](https://doi.org/10.1007/978-3-319-96145-3_30) Rabinizer 4 - From LTL to Your Favourite Deterministic Automaton.
 	[Jan Kretínský](https://dblp.org/pid/95/6511.html), [Tobias Meggendorfer](https://dblp.org/pid/194/2764.html), [Salomon Sickert](https://dblp.org/pid/129/1369.html), [Christopher Ziegler](https://dblp.org/pid/223/5064.html)
 	✅ Extends [[Rabinizer]]
 -	[🔓](https://doi.org/10.1007/978-3-319-96145-3_11) Eager Abstraction for Symbolic Model Checking.
