--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -9,7 +9,7 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_27) [[PrIC3]] - Property Directed Reachability for MDPs.
 	[Kevin Batz](https://dblp.org/pid/215/5068.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Benjamin Lucien Kaminski](https://dblp.org/pid/39/9937.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Christoph Matheja](https://dblp.org/pid/172/5070.html), [Philipp Schröer](https://dblp.org/pid/264/0074.html)
 	✅ Presents [[PrIC3]]
--	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) [[RTLola]] Cleared for Take-Off - Monitoring Autonomous Aircraft.
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) RTLola Cleared for Take-Off - Monitoring Autonomous Aircraft.
 	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Sebastian Schirmer](https://dblp.org/pid/185/8889.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Christoph Torens](https://dblp.org/pid/33/9870.html)
 	✅ Presents [[RTLola]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_17) Global PAC Bounds for Learning Discrete Time Markov Chains.
