Added tool pages: SAW, SAW(2), Sample, Scam-V

--- a/Conferences/CAV 2020.md
+++ b/Conferences/CAV 2020.md
@@ -47,9 +47,9 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_20) Nonlinear Craig Interpolant Generation.
 	[Ting Gan](https://dblp.org/pid/50/5083.html), [Bican Xia](https://dblp.org/pid/07/587.html), [Bai Xue](https://dblp.org/pid/74/2716-1.html), [Naijun Zhan](https://dblp.org/pid/63/1911.html), [Liyun Dai](https://dblp.org/pid/08/10346.html)
 	❌ None
--	[🔓](https://doi.org/10.1007/978-3-030-53288-8_26) [[SAW (Safety Analysis of Weakly-Hard Systems)]] - A Tool for Safety Analysis of Weakly-Hard Systems.
+-	[🔓](https://doi.org/10.1007/978-3-030-53288-8_26) SAW (Safety Analysis of Weakly-Hard Systems) - A Tool for Safety Analysis of Weakly-Hard Systems.
 	[Chao Huang](https://dblp.org/pid/18/4087.html), [Kai-Chieh Chang](https://dblp.org/pid/199/8216.html), [Chung-Wei Lin](https://dblp.org/pid/87/11.html), [Qi Zhu](https://dblp.org/pid/66/5923-2.html)
-	✅ Presents [[SAW]]
+	✅ Presents [SAW (Safety Analysis of Weakly-Hard Systems)](SAW%20(Safety%20Analysis%20of%20Weakly-Hard%20Systems).md)]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_15) Parameterized Verification of Systems with Global Synchronization and Guards.
 	[Nouraldin Jaber](https://dblp.org/pid/194/4203.html), [Swen Jacobs](https://dblp.org/pid/73/6880.html), [Christopher Wagner](https://dblp.org/pid/59/6876.html), [Milind Kulkarni](https://dblp.org/pid/47/1003.html), [Roopsha Samanta](https://dblp.org/pid/78/7445.html)
 	❌ None
@@ -67,7 +67,7 @@
 	❌ None
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_12) Validation of Abstract Side-Channel Models for Computer Architectures.
 	[Hamed Nemati](https://dblp.org/pid/127/4008.html), [Pablo Buiras](https://dblp.org/pid/07/7975.html), [Andreas Lindner](https://dblp.org/pid/28/610.html), [Roberto Guanciale](https://dblp.org/pid/12/5314.html), [Swen Jacobs](https://dblp.org/pid/73/6880.html)
-	✅ Implemented in [[Scam-V]]
+	✅ Presents [[Scam-V]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53288-8_11) Verification of Quantitative Hyperproperties Using Trace Enumeration Relations.
 	[Shubham Sahai](https://dblp.org/pid/170/7496.html), [Pramod Subramanyan](https://dblp.org/pid/27/8110.html), [Rohit Sinha](https://dblp.org/pid/04/4646-1.html)
 	❌ None
