Fix reference to RTLola

--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -11,7 +11,7 @@
 	✅ Presents [[PrIC3]]
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_3) RTLola Cleared for Take-Off - Monitoring Autonomous Aircraft.
 	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Sebastian Schirmer](https://dblp.org/pid/185/8889.html), [Maximilian Schwenger](https://dblp.org/pid/191/6041.html), [Christoph Torens](https://dblp.org/pid/33/9870.html)
-	✅ Presents [[RTLola]]
+	✅ Introduces the [[RTLola]] formal specification language
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_17) Global PAC Bounds for Learning Discrete Time Markov Chains.
 	[Hugo Bazille](https://dblp.org/pid/150/7498.html), [Blaise Genest](https://dblp.org/pid/59/6859.html), [Cyrille Jégourel](https://dblp.org/pid/33/10826.html), [Jun Sun](https://dblp.org/pid/s/JunSun1.html)
 	❌ None
