Added tool pages: SCHMIT, SCInfer

--- a/Conferences/CAV 2018(2).md
+++ b/Conferences/CAV 2018(2).md
@@ -91,6 +91,6 @@
 -	[🔓](https://doi.org/10.1007/978-3-319-96142-2_20) Partial Order Aware Concurrency Sampling.
 	[Xinhao Yuan](https://dblp.org/pid/70/10355.html), [Junfeng Yang](https://dblp.org/pid/71/3724.html), [Ronghui Gu](https://dblp.org/pid/155/8148.html)
 	❌ None
--	[🔓](https://doi.org/10.1007/978-3-319-96142-2_12) [[SCInfer]] - Refinement-Based Verification of Software Countermeasures Against Side-Channel Attacks.
+-	[🔓](https://doi.org/10.1007/978-3-319-96142-2_12) SCInfer - Refinement-Based Verification of Software Countermeasures Against Side-Channel Attacks.
 	[Jun Zhang](https://dblp.org/pid/29/4190.html), [Pengfei Gao](https://dblp.org/pid/147/0949.html), [Fu Song](https://dblp.org/pid/09/10016.html), [Chao Wang](https://dblp.org/pid/w/ChaoWang.html)
 	✅ Presents [[SCInfer]]
