Added tool pages: SeaHorn, SecC, Seminator, and format page: HOA

--- a/Conferences/CAV 2020(2).md
+++ b/Conferences/CAV 2020(2).md
@@ -18,9 +18,9 @@
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_22) Qualitative Controller Synthesis for Consumption Markov Decision Processes.
 	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Tomás Brázdil](https://dblp.org/pid/18/3197.html), [Petr Novotný](https://dblp.org/pid/91/10961.html), [Melkior Ornik](https://dblp.org/pid/175/9333.html), [Pranay Thangeda](https://dblp.org/pid/265/6126.html), [Ufuk Topcu](https://dblp.org/pid/12/6659.html)
 	✅ Implemented in [[FiMDP]]
--	[🔓](https://doi.org/10.1007/978-3-030-53291-8_2) [[Seminator 2]] Can Complement Generalized Büchi Automata via Improved Semi-determinization.
+-	[🔓](https://doi.org/10.1007/978-3-030-53291-8_2) Seminator 2 Can Complement Generalized Büchi Automata via Improved Semi-determinization.
 	[Frantisek Blahoudek](https://dblp.org/pid/131/6892.html), [Alexandre Duret-Lutz](https://dblp.org/pid/43/6032.html), [Jan Strejcek](https://dblp.org/pid/37/1716.html)
-	✅ [[Seminator 2]]
+	✅ Extends [[Seminator]], i.e. presents version 2
 -	[🔓](https://doi.org/10.1007/978-3-030-53291-8_20) Checking Qualitative Liveness Properties of Replicated Systems with Stochastic Scheduling.
 	[Michael Blondin](https://dblp.org/pid/117/6024.html), [Javier Esparza](https://dblp.org/pid/e/JEsparza.html), [Martin Helfrich](https://dblp.org/pid/250/9258.html), [Antonín Kucera](https://dblp.org/pid/k/AntoninKucera.html), [Philipp J. Meyer](https://dblp.org/pid/118/3833.html)
 	✅ Implementation of the proposed procedure has no name
