--- a/Conferences/CAV 2021.md
+++ b/Conferences/CAV 2021.md
@@ -2,52 +2,52 @@
 ---
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_16) Stateless Model Checking Under a Reads-Value-From Equivalence.
 	[Pratyush Agarwal](https://dblp.org/pid/206/9608.html), [Krishnendu Chatterjee](https://dblp.org/pid/92/5602.html), [Shreya Pathak](https://dblp.org/pid/292/8413.html), [Andreas Pavlogiannis](https://dblp.org/pid/47/8037.html), [Viktor Toman](https://dblp.org/pid/215/3408.html)
-	⚙️
+	✅ Extends [Nidhugg](Nidhugg)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_30) Fast Zone-Based Algorithms for Reachability in Pushdown Timed Automata.
 	[S. Akshay](https://dblp.org/pid/28/6534.html), [Paul Gastin](https://dblp.org/pid/g/PaulGastin.html), [Karthik R. Prakash](https://dblp.org/pid/293/8772.html)
-	⚙️
+	✅ Extends [TChecker](TChecker.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_41) Adapting Behaviors via Reactive Synthesis.
 	[Gal Amram](https://dblp.org/pid/132/9195.html), [Suguman Bansal](https://dblp.org/pid/217/4777.html), [Dror Fried](https://dblp.org/pid/74/9853.html), [Lucas Martinelli Tabajara](https://dblp.org/pid/137/3715.html), [Moshe Y. Vardi](https://dblp.org/pid/v/MosheYVardi.html), [Gera Weiss](https://dblp.org/pid/52/1274.html)
-	⚙️
+	✅ Presents [[SGR(k)]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_26) IMITATOR 3 - Synthesis of Timing Parameters Beyond Decidability.
 	[Étienne André](https://dblp.org/pid/49/2992.html)
-	⚙️
+	✅ Extends [[IMITATOR]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_40) PAYNT - A Tool for Inductive Synthesis of Probabilistic Programs.
 	[Roman Andriushchenko](https://dblp.org/pid/284/2809.html), [Milan Ceska ](https://dblp.org/pid/213/3728.html), [Sebastian Junges](https://dblp.org/pid/115/4386.html), [Joost-Pieter Katoen](https://dblp.org/pid/k/JoostPieterKatoen.html), [Simon Stupinský](https://dblp.org/pid/297/3712.html)
-	⚙️
+	✅ Presents [[PAYNT]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_14) Isla - Integrating Full-Scale ISA Semantics and Axiomatic Concurrency Models.
 	[Alasdair Armstrong](https://dblp.org/pid/85/10670.html), [Brian Campbell ](https://dblp.org/pid/58/4171-1.html), [Ben Simner](https://dblp.org/pid/202/8946.html), [Christopher Pulte](https://dblp.org/pid/173/9501.html), [Peter Sewell](https://dblp.org/pid/74/185.html)
-	⚙️
+	✅ Presents [[Isla]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_42) Causality-Based Game Solving.
 	[Christel Baier](https://dblp.org/pid/b/ChristelBaier.html), [Norine Coenen](https://dblp.org/pid/167/7922.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [Florian Funke ](https://dblp.org/pid/69/9320-2.html), [Simon Jantsch](https://dblp.org/pid/222/4864.html), [Julian Siber](https://dblp.org/pid/293/9557.html)
-	⚙️
+	✅ Presents [[CabPy]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_33) A Temporal Logic for Asynchronous Hyperproperties.
 	[Jan Baumeister](https://dblp.org/pid/253/1662.html), [Norine Coenen](https://dblp.org/pid/167/7922.html), [Borzoo Bonakdarpour](https://dblp.org/pid/59/6397.html), [Bernd Finkbeiner](https://dblp.org/pid/73/4443.html), [César Sánchez](https://dblp.org/pid/38/1858.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_24) Computing Bottom SCCs Symbolically Using Transition Guided Reduction.
 	[Nikola Benes](https://dblp.org/pid/71/1110.html), [Lubos Brim](https://dblp.org/pid/92/3060.html), [Samuel Pastva](https://dblp.org/pid/167/4487.html), [David Safránek](https://dblp.org/pid/86/2438.html)
-	⚙️
+	⚙️ Implemented an algorithm called ITGR, tool doesn't seem to have a name, seems to be just a prototype
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_31) Verified Cryptographic Code for Everybody.
 	[Brett Boston](https://dblp.org/pid/169/6792.html), [Samuel Breese](https://dblp.org/pid/195/8676.html), [Joey Dodds](https://dblp.org/pid/223/5187.html), [Mike Dodds](https://dblp.org/pid/77/665.html), [Brian Huffman](https://dblp.org/pid/69/3465.html), [Adam Petcher](https://dblp.org/pid/90/7791.html), [Andrei Stefanescu](https://dblp.org/pid/13/9657.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_38) Program Sketching by Automatically Generating Mocks from Tests.
 	[Nate F. F. Bragg](https://dblp.org/pid/297/3635.html), [Jeffrey S. Foster](https://dblp.org/pid/18/2050.html), [Cody Roux](https://dblp.org/pid/02/7115.html), [Armando Solar-Lezama](https://dblp.org/pid/95/6919.html)
-	⚙️
+	✅ Presents [[Sketcham]], expands [[Sketch]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_36) Pre-deployment Security Assessment for Cloud Services Through Semantic Reasoning.
 	[Claudia Cauli](https://dblp.org/pid/201/5360.html), [Meng Li](https://dblp.org/pid/70/1726.html), [Nir Piterman](https://dblp.org/pid/p/NPiterman.html), [Oksana Tkachuk](https://dblp.org/pid/88/4695.html)
-	⚙️
+	✅ Presents [[CloudFORMAL]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_9) Automated Safety Verification of Programs Invoking Neural Networks.
 	[Maria Christakis](https://dblp.org/pid/05/7730.html), [Hasan Ferit Eniser](https://dblp.org/pid/162/5556.html), [Holger Hermanns](https://dblp.org/pid/h/HolgerHermanns.html), [Jörg Hoffmann ](https://dblp.org/pid/26/836.html), [Yugesh Kothari](https://dblp.org/pid/297/3239.html), [Jianlin Li](https://dblp.org/pid/16/3878.html), [Jorge A. Navas](https://dblp.org/pid/77/4230a.html), [Valentin Wüstholz](https://dblp.org/pid/28/9798.html)
-	⚙️
+	⚙️ Implementation doesn't seem to have a name? https://github.com/Practical-Formal-Methods/clam-racetrack
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_19) Checking Data-Race Freedom of GPU Kernels, Compositionally.
 	[Tiago Cogumbreiro](https://dblp.org/pid/94/7128.html), [Julien Lange](https://dblp.org/pid/96/7159.html), [Dennis Liew Zhen Rong](https://dblp.org/pid/297/3624.html), [Hannah Zicarelli](https://dblp.org/pid/297/3355.html)
-	⚙️
+	✅ Presents [[Faial]]
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_4) Programmable Program Synthesis.
 	[Loris D'Antoni](https://dblp.org/pid/85/770.html), [Qinheping Hu](https://dblp.org/pid/201/4822.html), [Jinwoo Kim](https://dblp.org/pid/85/1809.html), [Thomas W. Reps](https://dblp.org/pid/r/TWReps.html)
-	⚙️
+	❌ None
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_34) Product Programs in the Wild - Retrofitting Program Verifiers to Check Information Flow Security.
 	[Marco Eilers](https://dblp.org/pid/217/4745.html), [Severin Meier](https://dblp.org/pid/297/4125.html), [Peter Müller ](https://dblp.org/pid/m/PMuller1.html)
-	⚙️
+	✅ Extends [Nagini](Nagini.md)
 -	[🔓](https://doi.org/https://doi.org/10.1007/978-3-030-81685-8_15) Summing up Smart Transitions.
 	[Neta Elad](https://dblp.org/pid/292/8081.html), [Sophie Rain](https://dblp.org/pid/292/7625.html), [Neil Immerman](https://dblp.org/pid/i/NeilImmerman.html), [Laura Kovács](https://dblp.org/pid/k/LauraKovacs.html), [Mooly Sagiv](https://dblp.org/pid/s/SSagiv.html)
 	⚙️
